--- a/ranfashuoming/ranfashuoming.html
+++ b/ranfashuoming/ranfashuoming.html
@@ -1,6 +1,7 @@
 <html>
 <body>
-<img src='items.png' />
+<img src='items1.png' /><br />
+<img src='items2.png' />
 <hr>
 <h1>如果您还没在48小时之内做过该产品的敏感测试，请先完成下文的“敏感测试”来确保该产品的安全性<h1>
 <hr>
