--- a/ranfashuoming/ranfashuoming.html
+++ b/ranfashuoming/ranfashuoming.html
@@ -1,4 +1,7 @@
 <html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
 <body>
 <img src='items.png' />
 <hr>
