Change the image layout.

--- a/ranfashuoming/ranfashuoming.html
+++ b/ranfashuoming/ranfashuoming.html
@@ -3,7 +3,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<img src='items.png' />
+<img src='item1.png' />
+<img src='item2.png' />
+<img src='item3.png' />
+<img src='item4.png' />
+<img src='item5.png' />
+<img src='item6.png' />
 <hr>
 <h1>如果您还没在48小时之内做过该产品的敏感测试，请先完成下文的“敏感测试”来确保该产品的安全性<h1>
 <hr>
